src/utils/snapshots/tuxtalks_oxide__utils__fuzzy_tests__tests__fuzzy_match_animals.snap
---
source: src/utils/fuzzy_tests.rs
expression: match_3
---
[
    MatchResult {
        text: "Animals",
        score: 0.9714285714285714,
    },
]
