src/utils/snapshots/tuxtalks_oxide__utils__fuzzy_tests__tests__fuzzy_match_dark_side.snap
---
source: src/utils/fuzzy_tests.rs
expression: match_1
---
[
    MatchResult {
        text: "Dark Side of the Moon",
        score: 0.9,
    },
]
