src/utils/snapshots/tuxtalks_oxide__utils__fuzzy_tests__tests__fuzzy_match_wall.snap
---
source: src/utils/fuzzy_tests.rs
expression: match_2
---
[
    MatchResult {
        text: "The Wall",
        score: 0.9,
    },
]
